--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.young.metro">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -11,7 +12,7 @@
 
     <application
         android:networkSecurityConfig="@xml/network_security_config"
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="${appIcon}"
         android:label="${appName}"
         android:name="com.young.metro.MetroApp"
@@ -19,7 +20,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Metro">
         <activity android:name=".ui.MainActivity"
-            android:screenOrientation="portrait">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="fullSensor">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
