--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,6 @@ android.useAndroidX=true
 kotlin.code.style=official
 android.enableJetifier=true
 android.enable=true
+
+kapt.use.worker.api=false
+kapt.incremental.apt=false
