--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,38 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.young.metro">
+          package="com.young.metro">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
     <application
-        android:networkSecurityConfig="@xml/network_security_config"
-        android:allowBackup="false"
-        android:icon="${appIcon}"
-        android:label="${appName}"
-        android:name="com.young.metro.MetroApp"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.Metro">
+            android:networkSecurityConfig="@xml/network_security_config"
+            android:allowBackup="false"
+            android:icon="${appIcon}"
+            android:label="${appName}"
+            android:name="com.young.metro.MetroApp"
+            android:roundIcon="@mipmap/ic_launcher_round"
+            android:supportsRtl="true"
+            android:theme="@style/Theme.Metro">
         <activity android:name=".ui.MainActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+                  android:exported="true"
+                  android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
 
         <service android:name="com.young.metro.service.LocationService"
-            android:foregroundServiceType="location"/>
+                 android:exported="false"
+                 android:foregroundServiceType="location"/>
 
         <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_cloude_key">
+                android:name="com.google.android.geo.API_KEY"
+                android:value="@string/google_cloude_key">
         </meta-data>
     </application>
 
