--- a/keystore.properties
+++ b/keystore.properties
@@ -1,5 +1,4 @@
-
 keyAlias = key0
-keyPassword = dpxmfl$Fka!-!
-storeFile = dentiKey.jks
-storePassword = dpxmfl$Fka!-!
+keyPassword = 1q2w3e4r@
+storeFile = metroKey
+storePassword = 1q2w3e4r@
